# docs-mkdocs

./: 404.html  README.md  index.html  mkdocs.yml.orig  nav.yml  pyproject.toml  search.html  style.css
.github/workflows/: ci.yml
src/: gen-nav.py  gen_nav.py
