[tool.poetry]
name = "docs-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
PyYAML = "^6.0"
python-markdown-math = "^0.8"
pymdown-extensions = "^9.5"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.960"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
